fix code alignment in webview

--- a/styles/designs/webview/parts/_code-components.scss
+++ b/styles/designs/webview/parts/_code-components.scss
@@ -63,6 +63,7 @@ $CodeSnippet__LineNumbers--Code: (
     _properties: (
       font-size: 1.2rem,
       font-family: enum('ValueSet:::OPTIONAL'),
-      padding-left: 0.5rem
+      padding-left: 0.5rem,
+      text-align:left
     )
 );
